# mcp-gmail

./: .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
mcp_gmail/: cli.py  config.py  gmail.py  server.py
scripts/: test_gmail_setup.py
tests/: test_config.py
