[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-gmail"
version = "0.1.0"
description = "Model Context Protocol server for Gmail integration"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Jeremy Jordan", email = "no-reply@example.com" }]
dependencies = [
    "mcp[cli]>=0.6.0",
    "google-auth>=2.27.0",
    "google-auth-oauthlib>=1.1.0",
    "google-api-python-client>=2.116.0",
    "pydantic>=2.0.0",
]

[project.scripts]
mcp-gmail = "mcp_gmail.cli:main"

[dependency-groups]
dev = ["pytest>=7.0.0", "ruff>=0.1.0", "pre-commit>=3.5.0"]

[tool.black]
line-length = 108
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 108

[tool.ruff]
line-length = 108
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "B", "I"]
# server.py: long docstrings/prompts (E501), single consolidated gmail import block (I001)
per-file-ignores = { "mcp_gmail/server.py" = ["E501", "I001"] }
